# powder-rs

./: Cargo.toml  LICENSE  README.md
assets/: particle.pcx
res/shaders/: fragment.wgsl  vertex.wgsl
src/: config.rs  gui.rs  main.rs
src/graphics/: graphics.rs
src/math/: vector.rs
src/sim/: grid.rs  mod.rs  particle.rs
src/simulation/: mod.rs  particle.rs  simulation.rs  timestep.rs  world.rs
src/simulation/physics/: gravity.rs
src/utils/: geometry.rs  graphics.rs  loader.rs  mod.rs  time.rs
