[package]
name = "powdertoyrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
cgmath = "0.18.0"
crossbeam = "0.8.2"
env_logger = "0.9"
getrandom = "0.2"
line_drawing = "1.0"
log = "0.4"
pcx = "0.2"
pixels = "0.9.0"
rand = "0.8.5"
randomize = "3.0"
winit = "0.26"
winit_input_helper = "0.12"

[profile.dev.package.rapier2d]
opt-level = 3

[profile.dev.package.rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1